styles.css
@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-size: 16px;
  font-family: "Josefin Sans", sans-serif;
}

.container {
  display: grid;
  grid-template-columns: 3fr 2fr;
  background: url(images/bg-pattern-desktop.svg),
    linear-gradient(hsl(0, 0%, 100%), hsl(0, 100%, 98%));
}

.mobile-hero {
  display: none;
}

h1 span {
  color: hsl(0, 36%, 70%);
  font-weight: 300;
}

h1 {
  text-transform: uppercase;
  color: hsl(0, 6%, 24%);
  font-size: 3rem;
  letter-spacing: 13px;
  flex: 1;
}

.left-section {
  display: flex;
  flex-direction: column;
  margin: auto;
}

.main-content {
  width: 450px;
}

.left-section p {
  color: hsl(0, 36%, 70%);
  line-height: 2rem;
}

footer {
  text-align: center;
}

a {
  text-decoration: none;
}

input {
  border: 1px solid hsl(0, 36%, 70%);
  width: 100%;
  padding: 1rem;
  border-radius: 30px;
}

form {
  display: flex;
  position: relative;
}

button {
  background-color: hsl(0, 93%, 68%);
  background-image: linear-gradient(hsl(0, 80%, 86%), hsl(0, 74%, 74%));
  border: none;
  cursor: pointer;
  width: 6rem;
  height: 3.1rem;
  border-radius: 30px;
  position: absolute;
  right: 0%;
}

@media only screen and (max-width: 770px) {
  .container {
    display: flex;
    flex-direction: column;
    background: none;
  }

  .left-section {
    background: none;
  }

  .mobile-hero {
    display: block;
  }

  .mobile-hero img {
    width: 100%;
    margin-bottom: 50px;
  }

  .main-content {
    text-align: center;
    width: 90vw;
    margin: 0 auto;
  }

  h1 {
    font-size: 2.5rem;
  }

  .right-section {
    display: none;
  }

  p {
    text-align: center;
    line-height: 1.5rem;
    margin-bottom: 20px;
  }

  .logo {
    padding: 1.5rem;
  }

  form {
    width: 80vw;
    margin: auto;
  }
}

